--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,4 +22,4 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: cd Src &&  go mod download &&  go build -v ./cmd/main.go
+      run: cd Src &&  go mod download &&  go build -v ./Cmd/main.go
