--- a/Src/Config/config-development.yml
+++ b/Src/Config/config-development.yml
@@ -22,7 +22,17 @@ Redis:
   Host: localhost
   Port: 6379
   Password: password
-  db: 0
-  MinIdleConnections: 100
-  PoolSize: 5000
-  PoolTimeOut: 240
+  Db: 0
+  PoolSize: 10
+  PoolTimeOut: 15
+  ReadTimeOut: 5
+  WriteTimeOut: 5
+  DialTimeOut: 5
+  IdleCheckFrequency: 500
+Password:
+  IncludeChars: true
+  IncludeDigits: true
+  MinLength: 6
+  MaxLength: 64
+  IncludeUpperCase: true
+  IncludeLowerCase: true
