Refactor database and Redis initialization; update configuration structure and add connection parameters and Add Postgres Service in Program

--- a/Src/Config/config-development.yml
+++ b/Src/Config/config-development.yml
@@ -16,7 +16,10 @@ Postgres:
   User: postgres
   Password: admin
   DbName: RideMarketDb
-  SslMode: false
+  SslMode: disable
+  ConnMaxIdleTime: 10
+  MaxOpenConns: 100
+  ConnMaxLifetime: 30
 
 Redis:
   Host: localhost
