Add Logging Function With Interface and config elk and filebeat and elastic and kibana for send log to elk and add middleware for logging middle ware

--- a/Src/Config/config-docker.yml
+++ b/Src/Config/config-docker.yml
@@ -11,11 +11,11 @@ Cors:
   AllowOrigins: "*"
 
 Postgres:
-  Host: postgres_container
+  Host: localhost
   Port: 5432
   User: postgres
   Password: admin
-  DbName: RideMarketDb
+  DbName: car_sale_db
   SslMode: disable
   ConnMaxIdleTime: 10
   MaxOpenConns: 100
