--- a/Src/Config/config-development.yml
+++ b/Src/Config/config-development.yml
@@ -15,7 +15,7 @@ Postgres:
   Port: 5432
   User: postgres
   Password: admin
-  DbName: RideMarketDb
+  DbName: car_sale_db
   SslMode: disable
   ConnMaxIdleTime: 10
   MaxOpenConns: 100
